# loqufftools

./: .gitignore  README.md  gui.ipynb  pyproject.toml
SLMConfigs/: Hamamatsu_LCOS-SLM_X10468-07.ini  Holoeye_Pluto_NIR-015.ini
loqufftools/: cameras.py  hdf5_utils.py
loqufftools/cameras/: AbstractCamera.py  ImagingSource.py  Ximea.py
