[tool.poetry]
name = "loqufftools"
version = "0.1.0"
description = ""
authors = ["Marcos Gil <marcosgildeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
h5py = "^3.10.0"
numpy = "^1.26.2"
slmcontrol = "^0.0.3"
matplotlib = "^3.8.2"
tqdm = "^4.66.1"
ipywidgets = "^8.1.1"
pythonnet = "^3.0.3"
ipykernel = "^6.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
