[tool.poetry]
name = "loqufftools"
version = "0.1.0"
description = ""
authors = ["Marcos Gil <marcosgildeoliveira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.2"
pythonnet = "^3.0.3"
multimethod = "^1.10"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
